MapFile/MapFile/MapFileParser.cpp

// Generated from .\MapFile.g4 by ANTLR 4.13.0


#include "MapFileListener.h"

#include "MapFileParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct MapFileParserStaticData final {
  MapFileParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  MapFileParserStaticData(const MapFileParserStaticData&) = delete;
  MapFileParserStaticData(MapFileParserStaticData&&) = delete;
  MapFileParserStaticData& operator=(const MapFileParserStaticData&) = delete;
  MapFileParserStaticData& operator=(MapFileParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag mapfileParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
MapFileParserStaticData *mapfileParserStaticData = nullptr;

void mapfileParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (mapfileParserStaticData != nullptr) {
    return;
  }
#else
  assert(mapfileParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<MapFileParserStaticData>(
    std::vector<std::string>{
      "filename", "mapfile", "textureParameters", "property", "vertex", 
      "face", "brush", "entity"
    },
    std::vector<std::string>{
      "", "'('", "')'", "'{'", "'}'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "COMMENT", "NUM", "SP", "CR", "STR", "FILENAME"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  mapfileParserStaticData = staticData.release();
}

}

MapFileParser::MapFileParser(TokenStream *input) : MapFileParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

MapFileParser::MapFileParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  MapFileParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *mapfileParserStaticData->atn, mapfileParserStaticData->decisionToDFA, mapfileParserStaticData->sharedContextCache, options);
}

MapFileParser::~MapFileParser() {
  delete _interpreter;
}

const atn::ATN& MapFileParser::getATN() const {
  return *mapfileParserStaticData->atn;
}

std::string MapFileParser::getGrammarFileName() const {
  return "MapFile.g4";
}

const std::vector<std::string>& MapFileParser::getRuleNames() const {
  return mapfileParserStaticData->ruleNames;
}

const dfa::Vocabulary& MapFileParser::getVocabulary() const {
  return mapfileParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView MapFileParser::getSerializedATN() const {
  return mapfileParserStaticData->serializedATN;
}


//----------------- FilenameContext ------------------------------------------------------------------

MapFileParser::FilenameContext::FilenameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MapFileParser::FilenameContext::FILENAME() {
  return getToken(MapFileParser::FILENAME, 0);
}


size_t MapFileParser::FilenameContext::getRuleIndex() const {
  return MapFileParser::RuleFilename;
}

void MapFileParser::FilenameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MapFileListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFilename(this);
}

void MapFileParser::FilenameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MapFileListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFilename(this);
}

MapFileParser::FilenameContext* MapFileParser::filename() {
  FilenameContext *_localctx = _tracker.createInstance<FilenameContext>(_ctx, getState());
  enterRule(_localctx, 0, MapFileParser::RuleFilename);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(16);
    match(MapFileParser::FILENAME);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MapfileContext ------------------------------------------------------------------

MapFileParser::MapfileContext::MapfileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MapFileParser::MapfileContext::EOF() {
  return getToken(MapFileParser::EOF, 0);
}

std::vector<tree::TerminalNode *> MapFileParser::MapfileContext::COMMENT() {
  return getTokens(MapFileParser::COMMENT);
}

tree::TerminalNode* MapFileParser::MapfileContext::COMMENT(size_t i) {
  return getToken(MapFileParser::COMMENT, i);
}

std::vector<MapFileParser::EntityContext *> MapFileParser::MapfileContext::entity() {
  return getRuleContexts<MapFileParser::EntityContext>();
}

MapFileParser::EntityContext* MapFileParser::MapfileContext::entity(size_t i) {
  return getRuleContext<MapFileParser::EntityContext>(i);
}

std::vector<tree::TerminalNode *> MapFileParser::MapfileContext::CR() {
  return getTokens(MapFileParser::CR);
}

tree::TerminalNode* MapFileParser::MapfileContext::CR(size_t i) {
  return getToken(MapFileParser::CR, i);
}


size_t MapFileParser::MapfileContext::getRuleIndex() const {
  return MapFileParser::RuleMapfile;
}

void MapFileParser::MapfileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MapFileListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMapfile(this);
}

void MapFileParser::MapfileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MapFileListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMapfile(this);
}

MapFileParser::MapfileContext* MapFileParser::mapfile() {
  MapfileContext *_localctx = _tracker.createInstance<MapfileContext>(_ctx, getState());
  enterRule(_localctx, 2, MapFileParser::RuleMapfile);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(23); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(20);
              _errHandler->sync(this);
              switch (_input->LA(1)) {
                case MapFileParser::COMMENT: {
                  setState(18);
                  match(MapFileParser::COMMENT);
                  break;
                }

                case MapFileParser::T__2: {
                  setState(19);
                  entity();
                  break;
                }

              default:
                throw NoViableAltException(this);
              }
              setState(22);
              match(MapFileParser::CR);
              break;
            }

      default:
        throw NoViableAltException(this);
      }
      setState(25); 
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
    setState(29);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MapFileParser::COMMENT: {
        setState(27);
        match(MapFileParser::COMMENT);
        break;
      }

      case MapFileParser::T__2: {
        setState(28);
        entity();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(32);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MapFileParser::CR) {
      setState(31);
      match(MapFileParser::CR);
    }
    setState(34);
    match(MapFileParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TextureParametersContext ------------------------------------------------------------------

MapFileParser::TextureParametersContext::TextureParametersContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> MapFileParser::TextureParametersContext::NUM() {
  return getTokens(MapFileParser::NUM);
}

tree::TerminalNode* MapFileParser::TextureParametersContext::NUM(size_t i) {
  return getToken(MapFileParser::NUM, i);
}

std::vector<tree::TerminalNode *> MapFileParser::TextureParametersContext::SP() {
  return getTokens(MapFileParser::SP);
}

tree::TerminalNode* MapFileParser::TextureParametersContext::SP(size_t i) {
  return getToken(MapFileParser::SP, i);
}


size_t MapFileParser::TextureParametersContext::getRuleIndex() const {
  return MapFileParser::RuleTextureParameters;
}

void MapFileParser::TextureParametersContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MapFileListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTextureParameters(this);
}

void MapFileParser::TextureParametersContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MapFileListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTextureParameters(this);
}

MapFileParser::TextureParametersContext* MapFileParser::textureParameters() {
  TextureParametersContext *_localctx = _tracker.createInstance<TextureParametersContext>(_ctx, getState());
  enterRule(_localctx, 4, MapFileParser::RuleTextureParameters);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(36);
    match(MapFileParser::NUM);
    setState(37);
    match(MapFileParser::SP);
    setState(38);
    match(MapFileParser::NUM);
    setState(39);
    match(MapFileParser::SP);
    setState(40);
    match(MapFileParser::NUM);
    setState(41);
    match(MapFileParser::SP);
    setState(42);
    match(MapFileParser::NUM);
    setState(43);
    match(MapFileParser::SP);
    setState(44);
    match(MapFileParser::NUM);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PropertyContext ------------------------------------------------------------------

MapFileParser::PropertyContext::PropertyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> MapFileParser::PropertyContext::STR() {
  return getTokens(MapFileParser::STR);
}

tree::TerminalNode* MapFileParser::PropertyContext::STR(size_t i) {
  return getToken(MapFileParser::STR, i);
}

tree::TerminalNode* MapFileParser::PropertyContext::SP() {
  return getToken(MapFileParser::SP, 0);
}


size_t MapFileParser::PropertyContext::getRuleIndex() const {
  return MapFileParser::RuleProperty;
}

void MapFileParser::PropertyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MapFileListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProperty(this);
}

void MapFileParser::PropertyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MapFileListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProperty(this);
}

MapFileParser::PropertyContext* MapFileParser::property() {
  PropertyContext *_localctx = _tracker.createInstance<PropertyContext>(_ctx, getState());
  enterRule(_localctx, 6, MapFileParser::RuleProperty);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(46);
    match(MapFileParser::STR);
    setState(47);
    match(MapFileParser::SP);
    setState(48);
    match(MapFileParser::STR);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VertexContext ------------------------------------------------------------------

MapFileParser::VertexContext::VertexContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> MapFileParser::VertexContext::NUM() {
  return getTokens(MapFileParser::NUM);
}

tree::TerminalNode* MapFileParser::VertexContext::NUM(size_t i) {
  return getToken(MapFileParser::NUM, i);
}

std::vector<tree::TerminalNode *> MapFileParser::VertexContext::SP() {
  return getTokens(MapFileParser::SP);
}

tree::TerminalNode* MapFileParser::VertexContext::SP(size_t i) {
  return getToken(MapFileParser::SP, i);
}


size_t MapFileParser::VertexContext::getRuleIndex() const {
  return MapFileParser::RuleVertex;
}

void MapFileParser::VertexContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MapFileListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVertex(this);
}

void MapFileParser::VertexContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MapFileListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVertex(this);
}

MapFileParser::VertexContext* MapFileParser::vertex() {
  VertexContext *_localctx = _tracker.createInstance<VertexContext>(_ctx, getState());
  enterRule(_localctx, 8, MapFileParser::RuleVertex);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(50);
    match(MapFileParser::T__0);
    setState(52);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MapFileParser::SP) {
      setState(51);
      match(MapFileParser::SP);
    }
    setState(54);
    match(MapFileParser::NUM);
    setState(55);
    match(MapFileParser::SP);
    setState(56);
    match(MapFileParser::NUM);
    setState(57);
    match(MapFileParser::SP);
    setState(58);
    match(MapFileParser::NUM);
    setState(60);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MapFileParser::SP) {
      setState(59);
      match(MapFileParser::SP);
    }
    setState(62);
    match(MapFileParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FaceContext ------------------------------------------------------------------

MapFileParser::FaceContext::FaceContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MapFileParser::VertexContext *> MapFileParser::FaceContext::vertex() {
  return getRuleContexts<MapFileParser::VertexContext>();
}

MapFileParser::VertexContext* MapFileParser::FaceContext::vertex(size_t i) {
  return getRuleContext<MapFileParser::VertexContext>(i);
}

std::vector<tree::TerminalNode *> MapFileParser::FaceContext::SP() {
  return getTokens(MapFileParser::SP);
}

tree::TerminalNode* MapFileParser::FaceContext::SP(size_t i) {
  return getToken(MapFileParser::SP, i);
}

MapFileParser::FilenameContext* MapFileParser::FaceContext::filename() {
  return getRuleContext<MapFileParser::FilenameContext>(0);
}

MapFileParser::TextureParametersContext* MapFileParser::FaceContext::textureParameters() {
  return getRuleContext<MapFileParser::TextureParametersContext>(0);
}


size_t MapFileParser::FaceContext::getRuleIndex() const {
  return MapFileParser::RuleFace;
}

void MapFileParser::FaceContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MapFileListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFace(this);
}

void MapFileParser::FaceContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MapFileListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFace(this);
}

MapFileParser::FaceContext* MapFileParser::face() {
  FaceContext *_localctx = _tracker.createInstance<FaceContext>(_ctx, getState());
  enterRule(_localctx, 10, MapFileParser::RuleFace);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(64);
    vertex();
    setState(65);
    match(MapFileParser::SP);
    setState(66);
    vertex();
    setState(67);
    match(MapFileParser::SP);
    setState(68);
    vertex();
    setState(69);
    match(MapFileParser::SP);
    setState(70);
    filename();
    setState(71);
    match(MapFileParser::SP);
    setState(72);
    textureParameters();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BrushContext ------------------------------------------------------------------

MapFileParser::BrushContext::BrushContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> MapFileParser::BrushContext::CR() {
  return getTokens(MapFileParser::CR);
}

tree::TerminalNode* MapFileParser::BrushContext::CR(size_t i) {
  return getToken(MapFileParser::CR, i);
}

std::vector<MapFileParser::FaceContext *> MapFileParser::BrushContext::face() {
  return getRuleContexts<MapFileParser::FaceContext>();
}

MapFileParser::FaceContext* MapFileParser::BrushContext::face(size_t i) {
  return getRuleContext<MapFileParser::FaceContext>(i);
}


size_t MapFileParser::BrushContext::getRuleIndex() const {
  return MapFileParser::RuleBrush;
}

void MapFileParser::BrushContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MapFileListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBrush(this);
}

void MapFileParser::BrushContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MapFileListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBrush(this);
}

MapFileParser::BrushContext* MapFileParser::brush() {
  BrushContext *_localctx = _tracker.createInstance<BrushContext>(_ctx, getState());
  enterRule(_localctx, 12, MapFileParser::RuleBrush);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    match(MapFileParser::T__2);
    setState(75);
    match(MapFileParser::CR);
    setState(79); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(76);
      face();
      setState(77);
      match(MapFileParser::CR);
      setState(81); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == MapFileParser::T__0);
    setState(83);
    match(MapFileParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EntityContext ------------------------------------------------------------------

MapFileParser::EntityContext::EntityContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> MapFileParser::EntityContext::CR() {
  return getTokens(MapFileParser::CR);
}

tree::TerminalNode* MapFileParser::EntityContext::CR(size_t i) {
  return getToken(MapFileParser::CR, i);
}

std::vector<MapFileParser::PropertyContext *> MapFileParser::EntityContext::property() {
  return getRuleContexts<MapFileParser::PropertyContext>();
}

MapFileParser::PropertyContext* MapFileParser::EntityContext::property(size_t i) {
  return getRuleContext<MapFileParser::PropertyContext>(i);
}

std::vector<tree::TerminalNode *> MapFileParser::EntityContext::COMMENT() {
  return getTokens(MapFileParser::COMMENT);
}

tree::TerminalNode* MapFileParser::EntityContext::COMMENT(size_t i) {
  return getToken(MapFileParser::COMMENT, i);
}

std::vector<MapFileParser::BrushContext *> MapFileParser::EntityContext::brush() {
  return getRuleContexts<MapFileParser::BrushContext>();
}

MapFileParser::BrushContext* MapFileParser::EntityContext::brush(size_t i) {
  return getRuleContext<MapFileParser::BrushContext>(i);
}


size_t MapFileParser::EntityContext::getRuleIndex() const {
  return MapFileParser::RuleEntity;
}

void MapFileParser::EntityContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MapFileListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEntity(this);
}

void MapFileParser::EntityContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MapFileListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEntity(this);
}

MapFileParser::EntityContext* MapFileParser::entity() {
  EntityContext *_localctx = _tracker.createInstance<EntityContext>(_ctx, getState());
  enterRule(_localctx, 14, MapFileParser::RuleEntity);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(85);
    match(MapFileParser::T__2);
    setState(86);
    match(MapFileParser::CR);
    setState(92); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(89);
              _errHandler->sync(this);
              switch (_input->LA(1)) {
                case MapFileParser::STR: {
                  setState(87);
                  property();
                  break;
                }

                case MapFileParser::COMMENT: {
                  setState(88);
                  match(MapFileParser::COMMENT);
                  break;
                }

              default:
                throw NoViableAltException(this);
              }
              setState(91);
              match(MapFileParser::CR);
              break;
            }

      default:
        throw NoViableAltException(this);
      }
      setState(94); 
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
    setState(103);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MapFileParser::T__2

    || _la == MapFileParser::COMMENT) {
      setState(98);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case MapFileParser::T__2: {
          setState(96);
          brush();
          break;
        }

        case MapFileParser::COMMENT: {
          setState(97);
          match(MapFileParser::COMMENT);
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(100);
      match(MapFileParser::CR);
      setState(105);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(106);
    match(MapFileParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

void MapFileParser::initialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  mapfileParserInitialize();
#else
  ::antlr4::internal::call_once(mapfileParserOnceFlag, mapfileParserInitialize);
#endif
}
